# Matrix2024Release

./: README.md
JohnnyMnemonic/: .gitignore  CMakeLists.txt  LocalCam.cpp  README.md  RealSenseCam.cpp  colorPlayback.cpp  config.bat  cstcolor.cpp  depthPlayback.cpp  irPlayback.cpp  rscolor.cpp  rsdepth.cpp  rsir.cpp  rsrawcolor.cpp  rsrawir.cpp  videocollections.py
MainReactor/: .gitignore  CMakeLists.txt  README.md  config.json  main_reactor.cpp  pyproject.toml  reactorport.h  sample_consumer.cpp  sample_consumer.py  shared_camera_reader.cpp  shared_camera_source.cpp  shared_reader.cpp  shared_source.cpp  test_camera_include.h  videorec.cpp  videosend.cpp
MainReactor/calibration/FishEyeCalibrate/: FishEyeCalibrate.py
MainReactor/calibration/FishEyeUndistort/: FishEyeUndistort.py
MainReactor/calibration/RegularCameraCalibration/: calibrate.py  calibration_settings.json  camera_calib.json
MainReactor/camera/: camera.cpp  camera.h  camera_settings.h  realsense.cpp  realsense.h  runnable.h  video_capture.cpp  video_capture.h  zmq_camera.cpp  zmq_camera.h
MainReactor/config/: mac.json  rs_color.json  rs_color_awb.json  rs_depth.json  webcam.json
MainReactor/python/: MainReactor_python.cpp
MainReactor/python/MainReactor/: __init__.py
MainReactor/shared_mat/: shared_mat.cpp  shared_mat.h
mrc/: .gitignore  BlueBallABHistogram.npy  Building99Histogram.npy  CMakeLists.txt  README.md  awbcones.npy  blueTest.npy  camera_calib.json  histogram_creation.py  histogram_gui.py  histogram_streaming.py  mrc.cpp  mrc.h  sample_image_collector.py
